# GEO-ANOM-dashboard

./: .env.example  .gitignore  ANALYSIS.md  BUILD_COMPLETE.md  DASHBOARD_GUIDE.md  DAY1_START_NOW.md  DAY1_TASKS.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  EXPORT_GUIDE.md  FIXES_APPLIED.md  PRODUCT_SUMMARY.md  QUICKSTART.md  README.md  REALISTIC_ACTION_PLAN.md  START_HERE.md  STATUS.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_TROUBLESHOOTING.md  WEEK_PLAN.md  Working Doc for Full Proposal.docx  app.py  app_simple.py  create_github_pages.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
configs/: maryland.yaml
data/processed/: DASHBOARD_UPDATES.md  PRESENTATION_DECK.md  baseline_report.txt  day1_summary.md  day2_summary.md  recommendation.txt  scenario_comparison.csv
docs/: EXECUTIVE_SUMMARY.md  FULL_ANALYSIS_REPORT.md  data.html  day4_summary.md  day5_summary.md  index.html
geo_anom/: __init__.py
geo_anom/core/: __init__.py  cloud_storage.py  config.py  geo_utils.py  logging.py
geo_anom/phase1/: __init__.py  afo_registry.py  cdl_downloader.py  census_geocoder.py  naip_downloader.py
geo_anom/phase2/: __init__.py  (+6 more)
pages/: 2_🗂️_Data_Explorer.py  3_⚙️_Configuration.py
pages_backup/: 1_📊_Analytics.py
scripts/: compare_results.py  compare_scenarios.py  generate_baseline_report.py  generate_county_reports.py  geocode_missing.py  launch_training.py  realistic_optimization.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  sensitivity_analysis.py  setup_sam2.sh
tests/: test_afo_registry.py  test_cdl_downloader.py  test_naip_downloader.py  test_phase2_pipeline.py
(+40 files in other folders)
